# management/src/main/java/com/security/management/controller/AuthController.java
@@ -1,11 +1,11 @@
 package com.security.management.controller;
 
+import com.google.api.client.googleapis.auth.oauth2.GoogleIdToken;
 import com.security.management.api.AuthApi;
 import com.security.management.entity.UserEntity;
-import com.security.management.model.LoginRequestDTO;
-import com.security.management.model.LoginResponseDTO;
-import com.security.management.model.RegisterRequestDTO;
-import com.security.management.model.RegisterResponseDTO;
+import com.security.management.google.GoogleAuthService;
+import com.security.management.model.*;
+import com.security.management.security.JwtService;
 import com.security.management.service.UserService;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -19,6 +19,53 @@ import org.springframework.web.bind.annotation.RestController;
 public class AuthController implements AuthApi {
 
     private final UserService userService;
+    private final GoogleAuthService googleAuthService;
+    private final JwtService jwtService;
+
+    @Override
+    public ResponseEntity<LoginResponseDTO> googleLogin(
+            @RequestBody GoogleLoginRequestDTO request) {
+
+        try {
+
+            GoogleIdToken.Payload payload =
+                    googleAuthService.verifyToken(request.getIdToken());
+
+            String email = payload.getEmail();
+            String googleId = payload.getSubject();
+            String name = (String) payload.get("name");
+            String picture = (String) payload.get("picture");
+
+            UserEntity user = userService.googleLogin(
+                    email,
+                    googleId,
+                    name,
+                    picture
+            );
+            String token = jwtService.generateToken(user);
+
+
+            LoginResponseDTO response = new LoginResponseDTO();
+
+            response.setUserId(Math.toIntExact(user.getUserId()));
+            response.setEmail(user.getEmail());
+            response.setRole(user.getRole());
+            response.setProvider(user.getProvider());
+            response.setName(user.getName());
+            response.setPicture(user.getPicture());
+            response.setToken(token);
+            response.setMessage("Google Login Successful");
+
+
+            return ResponseEntity.ok(response);
+
+
+        } catch (Exception e) {
+
+            e.printStackTrace();
+            throw new RuntimeException("Google Login Failed");
+        }
+    }
 
     @Override
     public ResponseEntity<LoginResponseDTO> loginUser(
@@ -32,12 +79,18 @@ public class AuthController implements AuthApi {
                 loginRequestDTO.getPassword()
         );
 
+        String token = jwtService.generateToken(user);
+
         LoginResponseDTO response = new LoginResponseDTO();
 
-        response.setUserId(user.getUserId());
+        response.setUserId(Math.toIntExact(user.getUserId()));
         response.setEmail(user.getEmail());
         response.setRole(user.getRole());
+        response.setProvider(user.getProvider());
+        response.setName(user.getName());
+        response.setPicture(user.getPicture());
         response.setMessage("Login Successful");
+        response.setToken(token);
 
         return ResponseEntity.ok(response);
     }
@@ -57,6 +110,7 @@ public class AuthController implements AuthApi {
         response.setUserId(Math.toIntExact(user.getUserId()));
         response.setEmail(user.getEmail());
         response.setRole(user.getRole());
+        response.setProvider(user.getProvider());
         response.setMessage("Registration Successful");
 
         return ResponseEntity.status(HttpStatus.CREATED).body(response);
